#681 Squishing issue

--- a/src/sass/components/_network-positions.scss
+++ b/src/sass/components/_network-positions.scss
@@ -11,13 +11,10 @@
   align-items: center;
   flex: 5 0 130px;
   min-width: 130px; // flex-basis not being respected (Chrome)
-  left: 65px;
-    @include breakpoints(mid-small){
-      left:0px;
-    }
+
 
   &__bar-well {
-    display: none;
+    display: block;
     position: relative;
     margin-right: $space-sm;
     margin-left: $space-sm;
@@ -26,9 +23,9 @@
     border-radius: 3em;
     background-color: $gray-light;
     overflow: hidden;
-      @include breakpoints(mid-small){
-        display: block;
-      }
+      // @include breakpoints(mid-small){
+      //   display: block;
+      // }
   }
   
 
